basic screen for ranking

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
 
         <link rel="stylesheet" href="{% static 'semantic/semantic.min.css' %}">
         <link rel="stylesheet" href="{% static 'styles/salutem.css' %}">
+        <link rel="stylesheet" href="{% static 'styles/ranking.css' %}">
 
         <script src="{% static 'semantic/jquery-3.6.0.min.js' %}"></script>
         <script src="{% static 'semantic/semantic.min.js' %}"></script>
