--- a/templates/checking_semantic.html
+++ b/templates/checking_semantic.html
@@ -31,6 +31,16 @@
                             </div>
 
                         </div>
+                        <div class="row">
+                            <div class="column">
+                                <div class="ui four item small inverted grey menu header_menu">
+                                    <a class="item">Administração</a>
+                                    <a class="item">Placar</a>
+                                    <a class="item">Dashboard</a>
+                                    <a href="{% url 'logout' %}" class="item">Logout</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
