some info about event using vuejs

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,8 +17,8 @@
         {% block additional_styles %}{% endblock additional_styles %}
         {% block additional_scripts %}{% endblock additional_scripts %}
 
-        <script src="{% static 'scripts/vue.min.js' %}"></script>
-        <script src="{% static 'scripts/axios.min.js' %}"></script>
+        <script src="{% static 'scripts/vue.min.js' %}" /></script>
+        <script src="{% static 'scripts/axios.min.js' %}" /></script>
     </head>
     <body>
         <div class="ui grid">
