--- a/applications/accounts/templates/accounts/login.html
+++ b/applications/accounts/templates/accounts/login.html
@@ -19,7 +19,7 @@
                         {%  csrf_token %}
                         <div class='field'>{{ form.as_p }}</div>
                         <div class='field'>
-                            <button class="ui fluid large blue submit button">
+                            <button class="ui blue fluid button">
                                 Login
                                 <i class="right arrow icon"></i>
                             </button>
