--- a/applications/events/templates/events/events_running.html
+++ b/applications/events/templates/events/events_running.html
@@ -14,7 +14,7 @@
                 <h1 class="ui grey dividing header">Eventos em andamento</h1>
                 {% if events %}
                     {% for event in events %}
-                        <a class="ui fluid button" href="">{{ event }}</a>
+                        <a class="ui fluid green button" href="">{{ event }}</a>
                     {% endfor %}
                 {% else %}
                     <p>Não há registro de eventos ocorrendo neste momento</p>
