playing with conditional rendering

--- a/applications/leaderboard/templates/leaderboard/components/team_info.html
+++ b/applications/leaderboard/templates/leaderboard/components/team_info.html
@@ -6,6 +6,9 @@
                 total_questions: 10,
                 team_name: 'team name',
                 total_time: 0,
+                rt_questions: "1, 3",
+                rc_questions: "2",
+                wr_questions: "5",
             }
         },
         delimiters: ['[[', ']]'],
@@ -14,11 +17,14 @@
         <tr>
             <td class="collapsing">[[ team_name ]]</td>
             <td>
-                <div class="ui small icon fluid basic buttons">
-                    <div class="ui button" v-for="item in total_questions">
-                        [[ item ]]
+                <div class="ui small icon fluid buttons">
+                    <div class="ui small icon fluid buttons" v-for="item in total_questions" :key="item">
+                        <div v-if="wr_questions.includes(item)" class="ui red button">[[ item ]]</div>
+                        <div v-else-if="rc_questions.includes(item)" class="ui orange button">[[ item ]]</div>
+                        <div v-else-if="rt_questions.includes(item)" class="ui green button">[[ item ]]</div>
+                        <div class="ui button" v-else>[[ item ]]</div>
                     </div>
-                </div>
+                 </div>
             </td>
             <td class="collapsing">[[ total_time ]]</td>
         </tr>
