--- a/applications/leaderboard/templates/leaderboard/components/team_info.html
+++ b/applications/leaderboard/templates/leaderboard/components/team_info.html
@@ -4,11 +4,12 @@
         data() {
             return {
                 total_questions: 10,
-                team_name: 'team name',
-                total_time: 0,
+                team_name: 'Sol ta forte',
+                total_time: 120,
                 rt_questions: "1, 3",
                 rc_questions: "2",
                 wr_questions: "5",
+                punishments: 3
             }
         },
         delimiters: ['[[', ']]'],
@@ -26,7 +27,7 @@
                     </div>
                  </div>
             </td>
-            <td class="collapsing">[[ total_time ]]</td>
+            <td class="collapsing">[[ total_time ]]([[ punishments ]])</td>
         </tr>
         `
     })
