starting modal development

--- a/applications/events/templates/events/event_details.html
+++ b/applications/events/templates/events/event_details.html
@@ -15,7 +15,8 @@
                         <a href="{% url 'admin:index' %}" class="item">
                             Administração</a>
                         <a class="item">Placar</a>
-                        <a class="item">Dashboard</a>
+                        {% comment %} <a class="item">Dashboard</a> {% endcomment %}
+                        <a class="item" @click="showModal">Submissão</a>
                         <a href="{% url 'logout' %}" class="item">Logout</a>
                     </div>
                 </div>
@@ -30,6 +31,9 @@
 
             <!-- table teams content -->
             <teams_position></teams_position>
+
+            <!-- modal declaration-->
+            <submission_modal></submission_modal>
         </div>
     </div>
 
@@ -37,13 +41,24 @@
     {% include "leaderboard/components/left_header.html" %}
     {% include "leaderboard/components/right_header.html" %}
     {% include "leaderboard/components/teams_position.html" %}
+    {% include "leaderboard/components/submission_modal.html" %}
 
     <script>
         new Vue({
             el: '#leaderboard',
             delimiters: ['[[', ']]'],
             data () { return {} },
-            methods: {}
+            methods: {
+                showModal() {
+                    // show the modal
+                    $('#submission_modal')
+                    .modal({
+                        inverted: true
+                    })
+                    .modal('setting', 'transition', 'fade')
+                    .modal('show')
+                }
+            }
         })
     </script>
 {% endblock desktop %}
